@@ -1,5 +1,14 @@
 2000-06-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
+	* gc.c (alloc_some_heap):  Use scm_memory_error to indicate a
+	failed attempt to get additional memory from the system.
+
+	(scm_gc_for_newcell):  Changed the control structure to make the
+	behaviour explicit for the case that gc is not able to free any
+	cells.
+
+2000-06-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
 	* __scm.h (SCM_OUTOFRANGE):  Removed.
 
 	* error.c (scm_wta):  Removed sick dispatch code for range
